# Chastotomer

./: .gitignore  link_test_USB.txt
sources/: CH3-96-2.uvmpw  CH3-96-2.uvmpw.uvgui.Sasha  CMakeLists.txt  Chastotomer.uvmpw.uvgui.Sasha  Chastotomer.uvmpw.uvgui.Sasha.Sasha.tmp  DDS.uvmpw  DDS.uvmpw.uvgui.Ivan  DDS.uvmpw.uvgui.Sasha  DDS.uvmpw.uvgui.Привет
sources/Panel/: CMakeLists.txt  DisplayOld.c  PLIS.cpp  Panel.sct  Panel.uvguix.Ivan  Panel.uvguix.Sasha  Panel.uvguix.Привет  Panel.uvoptx  Panel.uvprojx  fonttry2.cpp
sources/Panel/src/: Device.cpp  Device.h  FreqMeter.cpp  FreqMeter.h  Log.h  Log_stm.cpp  Settings.cpp  Settings.h  defines.h  main.cpp  mytypes.h
sources/Panel/src/Calculate/: Calculator.cpp  MathFPGA.cpp  MathFPGA.h  ValueCountPulse.cpp  ValueCountPulse.h  ValueDuration.cpp  ValueDuration.h  ValueFPGA.cpp  ValueFPGA.h  ValueFrequency.cpp  ValueFrequency.h  ValuePeriod.cpp  ValuePeriod.h  ValuesFPGA.h
sources/Panel/src/Calculator/: Calculator.cpp  Calculator.h
sources/Panel/src/Data/: Heap.cpp  Heap.h
sources/Panel/src/Display/: Colors.cpp  Colors.h  Console.cpp  Console.h  Display.cpp  Display.h  Display_HAL.cpp  Display_stm.cpp  Indicator.cpp  Indicator.h  LED.cpp  Objects.cpp  Objects.h  Primitives.cpp  Primitives.h  Primitives_stm.cpp  Symbols.cpp  Symbols.h  Text.cpp  Text.h
sources/Panel/src/Display/Font/: AdvancedFont.cpp  AdvancedFont.h  AdvancedFont_p.cpp  AdvancedFont_p.h  BigFont.c  BigFont.h  BigFont1.h  Font.cpp  Font.h  FontBig.cpp  FontBig.h  FontMid.cpp  FontMid.h  Font_p.cpp  Font_p.h  font5.inc  font7.inc  font8.inc  fontGOST16B.inc  fontGOST16B.xml  fontGOSTAU16BOLD.inc  fontGOSTAU16BOLD.xml  fontGOSTB18B.xml  fontGOSTB20B.inc  fontGOSTB20B.xml  fonttry.cpp  fonttry2.cpp
sources/Panel/src/FreqMeter/: DisplaySTM.cpp  FL_Display.c  FreqMeter.cpp  FreqMeter.h  Functions.c  GP1157.c  Pointers.c  main2.cpp
sources/Panel/src/Hardware/: FPGA.cpp  FPGA.h  FreqMeter.cpp  FreqMeter.h  HAL.cpp  HAL.h  HAL_FSMC.cpp  HAL_FSMC_TEST.cpp  HAL_IT.cpp  MathFPGA.cpp  MathFPGA.h  PLIS.cpp  PLIS.h  VCP.cpp  VCP.h  stm32f4xx_it.c  stm32f4xx_it.h
sources/Panel/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_FSMC.cpp  HAL_IT.cpp  HAL_TIM.cpp  HAL_USBD.cpp  stm32f4xx_hal_conf.h
sources/Panel/src/Hardware/USBD/: usbd_cdc_interface.cpp  usbd_conf.cpp  usbd_core.cpp  usbd_desc.cpp  usbd_desc.h
sources/Panel/src/Keyboard/: Keyboard.cpp  Keyboard.h
sources/Panel/src/Menu/: Hint.cpp  Hint.h  Menu.cpp  Menu.h  Menu.txt  MenuItems.cpp  MenuItems.h  MenuItemsDef.h
sources/Panel/src/Menu/Pages/: MainPage.cpp  MainPage.h  PageChannelA.cpp  PageChannelA.h  PageChannelB.cpp  PageChannelB.h  PageChannelC.cpp  PageChannelC.h  PageChannelD.cpp  PageChannelD.h  PageChannels.cpp  PageChannels.h  PageIndication.cpp  PageIndication.h  PageModeChannels.cpp  PageModeChannelsB.cpp  PageModeIndication.cpp  PageModeIndication.h  PageModes.cpp  PageModes.h  PageModesA.cpp  PageModesA.h  PageModesB.cpp  PageModesB.h  PageModesC.cpp  PageModesC.h  PageModesD.cpp  PageModesD.h  PageService.cpp  PageService.h  Pages.h  (+7 more)
sources/Panel/src/SCPI/: DataSCPI.cpp  HeadSCPI.cpp  InputSCPI.cpp  MeasureSCPI.cpp  SCPI.cpp  SCPI.h  SCPI.txt  Sender.cpp  Sender.h  SetSCPI.cpp  StringUtils.cpp  StringUtils.h  Utils.cpp  Utils.h
sources/Panel/src/Utils/: Buffer.cpp  Buffer.h  Debug.cpp  Debug.h  Math.cpp  Math.h  Observer.h  Stack.cpp  Stack.h  String.cpp  String.h  StringUtils.cpp  StringUtils.h  Value.cpp  Value.h  ValueSTRICT.cpp  ValueSTRICT.h  Values.cpp  Values.h
sources/Panel/tests/: TestValueSTRICT.cpp  TestValuesFPGA.cpp  Tests.cpp  Tests.h  Utils.cpp
sources/Panel/tests/scripts/: comparator.py
sources/VS/: CMakeLists.txt
sources/VS/Panel/: CMakeLists.txt
sources/VS/Panel/src/: Application.cpp  Application.h  Application_win.cpp  Application_win.h  main_win.cpp
sources/VS/Saver/: CMakeLists.txt
sources/VS/Saver/src/: Application_win.cpp  Application_win.h  main_win.cpp
sources/common/_VS_KEIL/CMSIS/: core_cm4.h  stm32f437xx.h  system_stm32f4xx.h
sources/common/_VS_KEIL/HAL/: stm32f4xx.h  stm32f4xx_hal.cpp  stm32f4xx_hal.h  stm32f4xx_hal_adc.cpp  stm32f4xx_hal_adc.h  stm32f4xx_hal_cortex.cpp  stm32f4xx_hal_cortex.h  stm32f4xx_hal_crc.cpp  stm32f4xx_hal_crc.h  stm32f4xx_hal_dac.cpp  stm32f4xx_hal_dac.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dma.cpp  stm32f4xx_hal_dma.h  stm32f4xx_hal_dma2d.h  stm32f4xx_hal_flash.cpp  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.cpp  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_gpio.cpp  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_hcd.cpp  stm32f4xx_hal_hcd.h  stm32f4xx_hal_ltdc.h  stm32f4xx_hal_nor.h  stm32f4xx_hal_pcd.cpp  stm32f4xx_hal_pcd.h  stm32f4xx_hal_pwr.h  stm32f4xx_hal_pwr_ex.h  stm32f4xx_hal_rcc.cpp  stm32f4xx_hal_rcc.h  stm32f4xx_hal_rcc_ex.cpp  stm32f4xx_hal_rcc_ex.h  stm32f4xx_hal_rtc.cpp  stm32f4xx_hal_rtc.h  stm32f4xx_hal_spi.cpp  stm32f4xx_hal_spi.h  stm32f4xx_hal_sram.h  stm32f4xx_hal_tim.cpp  (+8 more)
sources/common/_VS_KEIL/std_includes/: algorithm  cmath  cstdarg  cstdio  cstdlib  cstring  ctype.h  integer.h  limits  limits.h  math.h  stdarg.h  stdint.h  stdio.h  stdlib.h  string.h
sources/fonts/: Font5.sgfnt  Font7.sgfnt  Font8.sgfnt  convert.bat  converter5full.py  converter7full.py  converter8full.py  font8.inc  map.tmp  table.map  table.tmp
sources/fonts/SG Bitmap Font Editor/: SGFED.chm  SGFED.ini  scripts.GID  scripts.cnt  scripts.hlp
sources/scripts/: build.bat  install_libs.bat  install_python_libs.bat  promt.bat  remake.bat
sources/scripts/Keil/: build.bat  build_load.bat  edit.bat  load.bat
sources/scripts/SDL2/: cmake_vs2017.bat  conventions.txt  download.py  install_and_build.bat  msbuild_vs2017.bat  readme.txt
sources/scripts/calc/: comparator.py
sources/scripts/vs_keil/: build.bat  edit.bat  make.bat  make_build.bat  run.bat
sources/scripts/vs_win/: build.bat  build_edit.bat  build_run.bat  copy_wxWidgets_dlls.bat  edit.bat  make.bat  make_build.bat  make_build_run.bat  readme.txt  rebuild.bat  run.bat
sources/scripts/wxWidgets/: cmake_vs2017.bat  download.py  msbuild_vs2017.bat
(+94 files in other folders)
